--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,20 +1,16 @@
 name: Publish to PyPI
 
 on:
+  push:
+    branches: [ main ]
   release:
     types: [published]
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to publish (e.g., 1.0.0)'
-        required: true
-        type: string
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment: pypi
-
+    
     steps:
     - uses: actions/checkout@v4
     
@@ -22,11 +18,25 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.11"
+
+    - name: Cache pip dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     
-    - name: Install build dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -r requirements-test.txt
         pip install build twine
+
+    - name: Run tests
+      run: |
+        pytest tests/ -v --cov=miso_client --cov-report=xml --cov-report=term
     
     - name: Build package
       run: |
