--- a/builder/miso-test/env.template
+++ b/builder/miso-test/env.template
@@ -7,7 +7,7 @@
 # =============================================================================
 
 NODE_ENV=development
-PORT=8083
+PORT=3083
 APP_NAME=miso-test
 LOG_LEVEL=info
 MISO_LOG_LEVEL=info
@@ -17,10 +17,21 @@ MISO_LOG_LEVEL=info
 # =============================================================================
 
 # MISO Application Client Credentials (per application)
+MISO_CONTROLLER_URL=http://${MISO_HOST}:${MISO_PORT}
+
+# MISO Application Client Credentials (per application)
 MISO_CLIENTID=kv://miso-test-client-idKeyVault
 MISO_CLIENTSECRET=kv://miso-test-client-secretKeyVault
-# MISO Controller URL
-MISO_CONTROLLER_URL=http://localhost:3100
+
+# Web Server URL
+# This is the PUBLIC-FACING URL that browsers/users access (e.g., http://localhost:3000)
+# For Docker: use localhost with mapped port (e.g., localhost:3000)
+# For production: use public domain (e.g., https://miso.example.com)
+MISO_WEB_SERVER_URL=http://localhost:${MISO_PUBLIC_PORT}
+
+# Allowed origins for CORS validation (comma-separated)
+# Use wildcards for ports: http://localhost:*
+MISO_ALLOWED_ORIGINS=http://localhost:3083,http://localhost:*
 
 
 # Encryption Configuration
@@ -32,10 +43,9 @@ API_KEY=kv://miso-controller-api-key-secretKeyVault
 # =============================================================================
 # REDIS CONFIGURATION
 # =============================================================================
-# Connects to external redis from aifabrix-setup
 
+# Connects to external redis from aifabrix-setup
 REDIS_URL=kv://redis-url
 REDIS_HOST=${REDIS_HOST}
 REDIS_PORT=6379
 REDIS_PASSWORD=kv://redis-passwordKeyVault
-
