--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = --strict-markers --strict-config --cov=miso_client --cov-report=term-missing --cov-report=html --cov-report=xml
+addopts = --strict-markers --strict-config --cov=miso_client --cov-report=term-missing --cov-report=html --cov-report=xml --ignore=tests/integration/
 markers =
     unit: Unit tests
     integration: Integration tests
