New input param: EncryptionKey

--- a/miso_client/utils/sensitive_fields_config.json
+++ b/miso_client/utils/sensitive_fields_config.json
@@ -25,7 +25,9 @@
       "privatekey",
       "secretkey",
       "cookie",
-      "session"
+      "session",
+      "encryptionkey",
+      "encryptionKey"
     ]
   },
   "fieldPatterns": []
