--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
 name: Publish to PyPI
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - 'v*'   # Trigger on version tag push (e.g., v4.1.0)
   workflow_dispatch:
     inputs:
       version:
@@ -115,24 +116,3 @@ jobs:
         echo "🌐 Registry: https://pypi.org"
         echo ""
         echo "Installation: pip install miso-client==$VERSION"
-
-    - name: Update GitHub Release
-      if: github.event_name == 'release'
-      run: |
-        VERSION="${{ steps.get_version.outputs.VERSION }}"
-        
-        gh release edit "v$VERSION" \
-          --notes "## miso-client v$VERSION
-        
-        ✅ **Published to PyPI**: \`miso-client==$VERSION\`
-        
-        ### Installation
-        \`\`\`bash
-        pip install miso-client==$VERSION
-        \`\`\`
-        
-        ### Package Information
-        - **Registry**: https://pypi.org
-        - **Package URL**: https://pypi.org/project/miso-client/$VERSION/"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
